2009-05-18  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/capplet-utils.c (capplet_tree_store_move_children):
	* capplet/capplet-utils.h:
	* capplet/nwam_net_conf_panel.c (nwam_compose_tree_view),
	(nwam_net_conf_panel_init), (refresh),
	(nwam_net_conf_panel_finalize),
	(nwam_net_conf_update_status_cell_cb), (on_button_clicked),
	(selection_func), (update_widgets), (create_group_object),
	(update_ncu_like_group), (ncu_pri_group_get_index),
	(ncu_pri_group_find_iter_gt), (ncu_pri_group_get_iter),
	(ncu_pri_treeview_add):
	* common/nwamui_ip.c (nwamui_ip_get_property):
	Merged, correct update_widgets, but not sure if move up/down could 
	allows mixed grup/ncus.

2009-05-17  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_net_conf_panel.c: 
	  Added initial enable buttons elements, but not handled by event
	  callback yet.
	  Added create_group_object() and update_ncu_like_group() to handle
	  creation of a group object, and for when moving an ncu, allowing you
	  to update an NCU to match the values stored in the group object.
	  Haven't used them yet though... 

2009-05-15  Darren Kenny  <darren.kenny@sun.com>

	* nwam_core/usr/include/libnwam.h, nwam_core/usr/include/sys/mac.h:
	  Update to most recent headers.
	* common/nwamui_wifi_net.c, common/nwamui_wifi_net.h:
	  Fix rename of nwam_event_wlan_t to nwam_wlan_t

2009-05-15  Lin Ma  <Lin.Ma@Sun.COM>

	* daemon/nwam-menuitem.c (nwam_menu_item_forall):
	Fixed forall always include internal widgets.
	* capplet/capplet-utils.c (capplet_model_foreach_find_object),
	(capplet_list_foreach_merge_to_list_store),
	(capplet_list_foreach_merge_to_tree_store),
	(capplet_model_find_object), (capplet_model_1_level_foreach),
	(capplet_update_model_from_daemon),
	(capplet_combo_set_active_object):
	* capplet/capplet-utils.h:
	Removed dup functions. Change some small functions to Macros.
	* capplet/nwam_conn_stat_panel.c (nwam_pref_init),
	(nwam_conn_status_panel_finalize), (apply):